--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
+*,
+::before,
+::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+	--red: hsl(0, 100%, 74%);
+	--green: hsl(154, 59%, 51%);
+	--blue: hsl(248, 32%, 49%);
+	--dark-blue: hsl(249, 10%, 26%);
+	--grayish-blue: hsl(246, 25%, 77%);
+
+	--dark-blue-shadow: hsl(249, 10%, 26%, 0.3);
+
+	--font-size: 16px;
+	--font-family: "Poppins"; /*(https://fonts.google.com/specimen/Poppins)*/
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+	background-image: url("assets/img/bg-intro-mobile.png");
+	background-color: var(--red);
+	font-family: var(--font-family);
+	font-size: var(--font-size);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app {
+	margin: 0;
+	min-height: 100vh;
+	display: grid;
+
+	grid-template:
+		"header" auto
+		"main" 1fr
+		"footer" auto
+		/ 100%;
+
+	gap: 3em;
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+	color: #fff;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	padding-top: 5.5em;
+	gap: 1.5em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header__title {
+	width: 80%;
+	font-size: 1.7em;
+	text-align: center;
+	font-weight: 700;
+	line-height: 1.3;
+}
+
+.header__content {
+	width: 85%;
+	text-align: center;
+	line-height: 1.7;
+	font-weight: 500;
+}
+
+.footer {
+	display: flex;
+	color: #fff;
+	padding: 0.5em;
+	border-top: 1px solid hsl(0, 0%, 0%, 0.2);
+	justify-content: center;
+}
+
+.footer__attribution {
+	text-align: center;
+	font-size: 0.8em;
+}
+
+.footer__link {
+	color: var(--dark-blue);
+	text-decoration: none;
+}
+
+.footer__link:focus,
+.footer__link:focus-visible {
+	outline: none;
+	text-decoration: underline;
 }
