--- a/src/components/Notification.css
+++ b/src/components/Notification.css
@@ -6,8 +6,8 @@
 
 .notification__body {
 	background-color: var(--blue);
-	color: #fff;
-	width: 90%;
+	color: white;
+	width: var(--element-width);
 	border-radius: 8px;
 	padding: 1.5em 3em;
 	text-align: center;
