--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -40,7 +40,7 @@
 }
 
 .form__small {
-	padding: 0 2em;
+	padding: 0 1em;
 	font-size: 0.75em;
 	text-align: center;
 	color: var(--grayish-blue);
@@ -51,4 +51,11 @@
 	text-decoration: none;
 	color: var(--red);
 	font-weight: bold;
+	outline: none;
+}
+
+.form__link:focus,
+.form__link:focus-visible {
+	text-decoration: underline;
+	filter: brightness(110%);
 }
