--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	width: 100%;
 }
 
 .form__fieldset {
@@ -12,7 +13,7 @@
 	background-color: white;
 	border-radius: 8px;
 	box-shadow: 0 8px var(--dark-blue-shadow);
-	padding: 1.25em;
+	padding: 1.25em 1.25em 1.5em 1.25em;
 	gap: 1em;
 }
 
@@ -58,4 +59,15 @@
 .form__link:focus-visible {
 	text-decoration: underline;
 	filter: brightness(110%);
+}
+
+@media (min-width: 900px) {
+	.form {
+		align-items: flex-start;
+	}
+
+	.form__fieldset {
+		padding: 2.25em;
+		padding-bottom: 3em;
+	}
 }
