--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,8 @@ body {
 .app {
 	margin: 0;
 	min-height: 100vh;
+	max-height: 100vh;
+	max-width: 100vw;
 	display: grid;
 
 	grid-template:
@@ -102,13 +104,14 @@ body {
 @media (min-width: 900px) {
 	body {
 		background-image: url("assets/img/bg-intro-desktop.png");
+		background-size: cover;
 	}
 
 	.app {
 		grid-template:
 			"header main" 1fr
 			"footer footer" auto
-			/ 45% 55%;
+			/ 45% auto;
 
 		gap: 3.5em;
 	}
@@ -139,7 +142,7 @@ body {
 		flex-flow: column;
 		justify-content: center;
 		align-items: flex-start;
-		width: 80%;
-		margin-top: 7em;
+		width: 93%;
+		margin-top: 12%;
 	}
 }
